[#OW-2907] Fixed gsc text cut off issue

--- a/onCourseDocs/trunk/src/css/ish.css
+++ b/onCourseDocs/trunk/src/css/ish.css
@@ -669,6 +669,12 @@ input.gsc-input {
 .gsc-thinWrapper {
 	width: 100% !important;
 }
+.gsc-control-cse .gsc-wrapper .gs-result .gs-title {
+    height: auto !important;
+}
+.gsc-control-cse .gsc-wrapper .gs-result .gs-title, .gsc-control-cse .gsc-wrapper .gs-result .gs-title .gs-title * {
+    text-decoration: none !important;
+}
 
 
 /* Version switching */
